--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "projectx",
   "version": "1.0.0",
   "description": "idhjsdjhsjhhsahdxjsh",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "author": "nitish",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
